# listing_generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
examples/: .~lock.example.docx#  example.docx
src/listing_generator/: commands.py  entities.py  filters.py  main.py
src/listing_generator/application/: commands.py  filters.py  formatters.py
src/listing_generator/presentation/: cli.py
tests/: test_filter.py
